# electricsheep

./: Electricsheep.desktop  Makefile  Makefile.am  Makefile.in  README  bootstrap  config.cache  config.h  config.h.in  config.status  configure  configure.in  electricsheep-2.1-1.spec  electricsheep-frown.tif  electricsheep-smile.tif  electricsheep-splash-0.tif  electricsheep-splash-1.tif  electricsheep-voter.c  electricsheep.c  electricsheep.man  electricsheep.man.in  electricsheep.spec  electricsheep.spec.in  electricsheep.xml  electricsheep.xml.in  log  mkinstalldirs  timers.c.patch
debian/: README.Debian  REJECT  anim-flame.1  changelog  control  copyright  dirs  electricsheep.1  electricsheep.config  electricsheep.desktop  electricsheep.links  electricsheep.templates  examples  gbp.conf  import_upstream.sh  menu  mpeg-loop.1  pick-flame.1  postinst  postrm  preinst  prerm  rules  watch
debian/contrib/: esheep-mplayer.sh  esheep-mplayer.txt
debian/default-files/: electricsheep.desktop  electricsheep.desktop.gnome
debian/desktop-files/: ElectricSheep.desktop  screensaver-electricsheep.desktop
debian/manpages/: electricsheep-voter.1  electricsheep.1  flam3-animate.1  flam3-convert.1  flam3-genome.1  flam3-render.1  mpeg2dec_onroot.1
debian/patches/: 0001-Lua_from_system.patch  0002-obsolete_pthread_check.patch  0003-fix-Linux-version.patch  0004-install-FreeDesktop-entries-from-Debian-packaging.patch  0005-install-PNG-into-default-Icon-theme.patch  0006-fix-some-FFmpeg-deprecations.patch  00list  02_electricsheep.c_DATADIR.dpatch  03_libmpeg2_altivec.c_ppcftbfs.dpatch  04_Composite.dpatch  series
flam3/: Makefile.am  Makefile.in  README.txt  animate.dsp  config.h.in  configure  configure.in  convert.dsp  docstring.c  flam3-animate.c  flam3-convert.c  flam3-genome.c  flam3-palettes.c  flam3-render.c  flam3.c  flam3.h  genome.dsp  img.h  jpeg.c  mkinstalldirs  png.c  private.h  rect.c  render.dsp
flame/: Makefile  Makefile.am  Makefile.in  README  README.txt  anim-flame.c  anim.c  anim.dsp  cmap.c  cmap.h  config.h.in  configure  configure.in  convert-flame.c  convert.dsp  flame.c  hqi-flame.c  hqi.c  hqi.dsp  jpeg.c  jpeg.h  libifs.c  libifs.h  mkinstalldirs  pick-flame.c  pick.dsp  png.c  real.h  rect.c  rect.h  test.flame  tohirez-flame.c
mpeg2dec/: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in
mpeg2dec/autotools/: Makefile.in  mkinstalldirs
mpeg2dec/include/: Makefile.in  config.h.in
mpeg2dec/libmpeg2/: Makefile.am  Makefile.in  header.c  idct.c  motion_comp.c
mpeg2dec/libvo/: Makefile.am  Makefile.in  video_out_x11.c  vroot.h  yuv2rgb.c
mpeg2dec/src/: Makefile.am  Makefile.in  mpeg2dec_onroot.c
video_out/: 16bit.c  CHANGES  Makefile  Makefile.bak  README  ctrlbar.c  dependencies  gdith.c  gdith.c.orig  index.bt  jrevdct.c  main.c  mpeg_export.c  mpeg_export.h  proto.h  util.c  util32.c  video.c  video.h
