dnl $Id: configure.in,v 1.38 2006/04/14 08:59:39 spotspot Exp $
dnl Process this file with autoconf to produce a configure script.


AC_INIT(electricsheep.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(electricsheep,"2.6.8")
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_HEADER_STDC
AC_PATH_XTRA
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_CHECK_HEADERS(sys/mount.h sys/vfs.h sys/statvfs.h)
AC_CHECK_LIB([expat],[XML_ParserCreate],,[AC_MSG_ERROR([The expat xml library is required.])])
AC_FUNC_SETPGRP
AC_CHECK_FUNCS(setproctitle)

AM_MAINTAINER_MODE

GNOME_DATADIR=`pkg-config --variable=prefix gtk+-2.0`
GNOME_DATADIR="$GNOME_DATADIR/share"

AC_SUBST(GNOME_DATADIR)
AC_CONFIG_SUBDIRS( mpeg2dec flam3 )
AC_OUTPUT( Makefile )
AC_OUTPUT( electricsheep.xml )
AC_OUTPUT( electricsheep.spec )
AC_OUTPUT( electricsheep.man )
