AUTOMAKE_OPTIONS = foreign no-dependencies
bin_PROGRAMS = anim-flame hqi-flame pick-flame convert-flame
pick_flame_SOURCES = libifs.c rect.c cmap.c pick-flame.c
pick_flame_LDADD = -lm
anim_flame_SOURCES = jpeg.c libifs.c rect.c cmap.c png.c anim-flame.c
anim_flame_LDADD = -lm -lpng -lz
hqi_flame_SOURCES = jpeg.c libifs.c rect.c cmap.c png.c hqi-flame.c
hqi_flame_LDADD = -lm -lpng -lz
convert_flame_SOURCES = libifs.c cmap.c convert-flame.c
convert_flame_LDADD = -lm
EXTRA_DIST = cmap.h libifs.h rect.h jpeg.h test.flame flame.dsw hqi.dsp anim.dsp pick.dsp convert.dsp mkinstalldirs README.txt COPYING.txt
