dnl $Id: configure.in,v 1.14 2004/03/29 01:14:39 spotspot Exp $
dnl Process this file with autoconf to produce a configure script.

AC_INIT(anim-flame.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(flame,"1.13")
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_HEADER_STDC
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_CHECK_LIB([z],[deflateInit_],,[AC_MSG_ERROR([zlib is required.])])
AC_CHECK_LIB([png],[png_write_image],,[AC_MSG_ERROR([The png library is required.])])
AC_CHECK_LIB([expat],[XML_ParserCreate],,[AC_MSG_ERROR([The expat xml library is required.])])
AC_CHECK_LIB([jpeg],[jpeg_start_compress],,[AC_MSG_ERROR([The jpeg library is required.])])
AC_OUTPUT( Makefile )
